<resources>
    <string name="app_name">AriyanaFood</string>
    <string name="brand_name">Ariyana Food Application</string>
    <string name="food_name">Hamburger</string>
    <string name="food_type">US, Hamburger</string>
    <string name="food_price">$12 VIP</string>
    <string name="food_distance">12 miles from you</string>
    <string name="number_of_rates">90 Ratings</string>
    <string name="activity2_title">Add Item</string>
    <string name="submit_button">Confirm</string>
    <string name="remove_alert">Are you sure, you want to delete this item?</string>
    <string name="remove_accept">Yes</string>
    <string name="remove_decline">No</string>
</resources>