<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp">

    <ImageView
        android:id="@+id/foodImage"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/img_food"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/foodName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_name"
        android:layout_marginStart="16dp"
        android:textColor="?attr/colorOnPrimary"
        android:fontFamily="@font/product_sans_bold"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/foodImage"
        app:layout_constraintTop_toTopOf="@+id/foodImage"
        />

    <TextView
        android:id="@+id/foodType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_type"
        android:textColor="?attr/colorAccent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/foodName"
        app:layout_constraintStart_toEndOf="@+id/foodImage"
        />

    <TextView
        android:id="@+id/foodPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_price"
        android:textColor="?attr/colorAccent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/foodImage"
        app:layout_constraintTop_toBottomOf="@id/foodType"
        />

    <TextView
        android:id="@+id/foodDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_distance"
        android:textColor="?attr/colorAccent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/foodPrice"
        app:layout_constraintStart_toEndOf="@+id/foodImage"
        />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:rating="3.5"
        android:progressTint="@color/yellow_400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/Widget.AppCompat.RatingBar.Small"
        />

    <TextView
        android:id="@+id/numberOfRates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_rates"
        android:textColor="?attr/colorAccent"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="@id/ratingBar"
        app:layout_constraintStart_toStartOf="@+id/ratingBar"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar"
        />

</androidx.constraintlayout.widget.ConstraintLayout>