<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    >

    <TextView
        android:id="@+id/removeItemText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/remove_alert"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/removeAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove_accept"
        android:textSize="16sp"
        android:textColor="?attr/colorSecondaryVariant"
        android:padding="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@+id/removeItemText"
        app:layout_constraintStart_toEndOf="@id/removeDecline"
        app:layout_constraintEnd_toEndOf="@id/removeItemText"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/removeDecline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove_decline"
        android:textSize="16sp"
        android:textColor="?attr/colorSecondaryVariant"
        android:padding="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@+id/removeItemText"
        app:layout_constraintStart_toStartOf="@+id/removeItemText"
        app:layout_constraintEnd_toStartOf="@+id/removeAccept"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>